# goldsearch

./: README.md  com.github.alexkdeveloper.goldsearch.json  meson.build
data/: com.github.alexkdeveloper.goldsearch.appdata.xml.in  com.github.alexkdeveloper.goldsearch.desktop.in  com.github.alexkdeveloper.goldsearch.gresource.xml  com.github.alexkdeveloper.goldsearch.gschema.xml  meson.build
data/icons/: meson.build
po/: LINGUAS  it.po  nl.po  ru.po
src/: Application.vala  Bus.vala  Window.vala
